--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ celerybeat-schedule
 
 # Environments
 .env
-.venv
+.venv*
 env/
 venv/
 ENV/
@@ -142,6 +142,6 @@ ma_rasterized_trained_models
 scept_trained_models
 spatial_planner_trained_models
 
-
-
+# Datasets
+nuscenes/
 
